# Sandbox.Cpp

./: .gitignore  README.md
Alghorithm/BinarySearch/: app.cpp
Alghorithm/Task1/: app  app.cpp
Alghorithm/Task2/: app  app.cpp
Alghorithm/Task3/: app  app.cpp
Alghorithm/Task4/: app  app.cpp
Alghorithm/Task5/: app  app.cpp
Alghorithm/dijkstra_algorithm/: app.cpp
Alghorithm/fibonachi/: app  app.cpp
Assembly/: app.cpp  build.sh
Basic/EnumClass/: app.cpp
Basic/HelloWorld/: build.bat  hello.cpp
Basic/If/: app  app.cpp
Basic/byte_shift/: app.cpp
Basic/calc/: app.cpp
Basic/int_convertation/: app.cpp
Basic/limits_num/: app.cpp
Basic/static_var/: app.cpp
Boost_lib/: app.cpp
CMake/: CMakeLists.txt  main.cpp
CMake_mingw/: build.bat
C_code/extern_struct/: CMakeLists.txt  main.c
C_code/extern_var/: CMakeLists.txt  main.c
C_code/print/: Makefile  hello  hello.c
Callback/: Timer.cpp  app.cpp
ClassProject/: app.cpp  build.bat  calc.cpp  calc.h
ConstStaticMutable/: A.cpp  B.cpp  app.cpp
Containers/Array/: app.cpp
Containers/Array C/: app.cpp
Containers/Array C++/: app.cpp
Containers/Array_C_multi /: app.cpp
Containers/Intersection, Union/: app  app.cpp
Containers/List/: app.cpp
Containers/Map/: app.cpp
Containers/Queue/: app.cpp
Containers/RingBuffer/: app.cpp
Containers/RingBuffer_SPSC/: lock_free_queue.h
Containers/Set/: app  app.cpp
Containers/Set_multi/: app.cpp
Containers/Tree/: app.cpp  app2  app2.cpp  app3  app3.cpp
Containers/Tuple/: app.cpp
Containers/UnorderedMap/: app.cpp  app2  app2.cpp  app3.cpp  build.sh
Containers/UnorderedSet/: app.cpp
Containers/Vector/: app.cpp
CopyCtor/: app.cpp
Ctor/DelegatingCtor/: app.cpp
Ctor/Destructor/: app.cpp
Ctor/Explicit_ctor/: app.cpp
Ctor/ctor_types/: app.cpp  build.sh
Delete/: app.cpp
DrawLineCxx/: WindowsProjectCxx.sln
DrawLineCxx/WindowsProjectCxx/: Resource.h  WindowsProjectCxx.cpp  WindowsProjectCxx.rc  WindowsProjectCxx.vcxproj  WindowsProjectCxx.vcxproj.filters
EmptyProject/: app.cpp
EnumClass/: app.cpp
Exception/: app.cpp
Exception/ctor_exception/: app.cpp
Explicit_ctor/: app.cpp
FileStream/: app.cpp  build.bat
FunctionPointer/c_style/: app.cpp
Functor/: app.cpp
Gtest/: build.bat
Gtest/fixture/: build.sh  my_class.hpp
Gtest/gcc_gtest/: CMakeLists.txt
Gtest/gcc_gtest_fixture/: hello_test.cc
Gtest/mock/: adder.hpp  calculator.hpp  hello_test.cc
Gtest/nice_mock/: CMakeLists.txt  app.cpp  logic.hpp  readme.md
Hash/: app.cpp
Hash/standard_hash_func/: app.cpp
Hash/user_hash_func/: app.cpp
HashTable/: app.cpp
HelloWorld/: build.bat  hello  hello.cpp
Iinheritance/: ChildClass.cpp
Inheritance/: BaseClass.cpp  app.cpp
Inheritance/InheritanceConstructor/: ChildClass.h
Inheritance/simple/: ChildClass.cpp
InheritanceConstructor/: BaseClass.h  app.cpp
Interface/: MyClass.h  app.cpp
Interface/project/: app.cpp  base_class.hpp  build.sh  child_class.hpp  initialization.cpp
Interface/simple/: IBase.h
Iterator/: app.cpp
Lambda/: app.cpp
Lambda/function/: app.cpp
Lambda/send_to_func/: build.bat
Lambda/simple/: app.cpp
LeetCode/13_easy_Roman_to_int/: app.cpp
LeetCode/13_easy_Roman_to_int_2/: app  app.cpp
LeetCode/14_easy_LongestCommonPrefix/: app.cpp
LeetCode/20_ValidParentheses_2/: app  app.cpp  build.sh
LeetCode/21_MergeTwoSortedLists/: app  app.cpp  build.sh
LeetCode/9_easy/: app.cpp
Move/: app.cpp
Move/copy_operator/: app.cpp
Move/forvard/: app.cpp
Move/move_ctor/: app.cpp
Move/move_std/: app.cpp
Move/move_string/: app.cpp
Move/move_vector/: app.cpp
Move/move_vector_class/: app.cpp
Multiple inherittance/: app.cpp
Mutex/: app.cpp
Operator/: app.cpp
Operator/Operator()/: app.cpp
Operator/Operator_arithmetic/: app.cpp
Pointer/: app.cpp
PracticJun/CountOnes/: app.cpp
PracticJun/ReversList/: app.cpp
PracticJunior/BinaryTree/: app.cpp
PracticJunior/LeapYear/: app.cpp
PracticJunior/LogClass/: app.cpp
Qt/qt6/vector_boxes/: CMakeLists.txt  main.cpp
R-value/: app.cpp
Random/: app.cpp
Recursive/: app.cpp
Reference/: app.cpp
String/: app  app.cpp
StringStream/: app.cpp
Struct/: app.cpp
Template/: app.cpp  myclass.cpp  template_class.cpp
Template_Interface/: ChildClass.h  IBase.h  app.cpp  build.sh
Thread/: app.cpp  build.bat
Time/: app.cpp
Tree/: app.cpp
TryCatch/: app.cpp  test1.cpp
Vector/: app.cpp
VirtualContainer/: app  app.cpp
VirtualFunction/: BaseClass.cpp  Child.cpp  app.cpp
VirtualPure/: app.cpp
VsProject/: VsProject.sln
_EmptyProject/: build.sh
cmake/CMake_ninja/: CMakeLists.txt  main.cpp  readme.md
cmake/cmake_c_lib/: CMakeLists.txt  mylib.h
cmake/cmake_c_lib_shared/: CMakeLists.txt  mylib.c  readme.txt
cmake/cmake_c_lib_static/: CMakeLists.txt  main.cpp  readme.txt
cmake/cmake_c_lib_static_with_inner_build/: CMakeLists.txt  calc_helper.cpp  printer.hpp
cmake/cmake_c_lib_static_with_inner_build/mylib_prj/: CMakeLists.txt  mylib.h
malloc/: app.cpp
(+273 files in other folders)
